--- a/FlashWizBE/FlashWizServer/build.gradle
+++ b/FlashWizBE/FlashWizServer/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
+	
 }
 
 tasks.named('test') {
