--- a/FlashWizBE/FlashWizServer/src/main/resources/application.properties
+++ b/FlashWizBE/FlashWizServer/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/flashwizdb?createDatabaseIfNotExist=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.username=root
+spring.datasource.password=Vodinhluan2002
+spring.jpa.hibernate.ddl-auto=update
 
+server.port=8000
