--- a/FlashWizBE/FlashWizServer/build.gradle
+++ b/FlashWizBE/FlashWizServer/build.gradle
@@ -19,7 +19,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.29'
+	implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '6.2.0'
+
 	
 }
 
