--- a/FlashWizFE/app/src/main/AndroidManifest.xml
+++ b/FlashWizFE/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.flashwiz.flashwizapp"
+    >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,10 +17,13 @@
         tools:targetApi="31">
         <activity
             android:name=".SignUpActivity"
-            android:exported="false" />
+            android:theme="@style/Theme.AppCompat.Light">
+        </activity>
         <activity
             android:name=".SignInActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light">
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
