--- a/FlashWizFE/app/src/main/AndroidManifest.xml
+++ b/FlashWizFE/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.flashwiz.flashwizapp"
-    >
+    package="com.flashwiz.flashwizapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -17,12 +16,14 @@
         tools:targetApi="31">
         <activity
             android:name=".SignUpActivity"
-            android:theme="@style/Theme.AppCompat.Light">
+            android:theme="@style/Theme.AppCompat.Light"
+            android:label="@string/sign_up">
         </activity>
         <activity
             android:name=".SignInActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.Light">
+            android:theme="@style/Theme.AppCompat.Light"
+            android:label="@string/sign_in">
         </activity>
         <activity
             android:name=".MainActivity"
