--- a/FlashWiz_FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FlashWiz_FrontEnd/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name="com.example.flashwiz_fe.AuthApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,7 +13,7 @@
         android:theme="@style/Theme.AuthModuleYT"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.flashwiz_fe.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.AuthModuleYT">
