--- a/FlashWizBE/FlashWizServer/src/main/resources/application.properties
+++ b/FlashWizBE/FlashWizServer/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3308/flashwizdb?createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=root
-spring.datasource.password=Vodinhluan2002
+spring.datasource.password=Nhat@12072002
 #spring.datasource.password=matkhau
 spring.jpa.hibernate.ddl-auto=update
 
