--- a/FlashWiz_FrontEnd/app/build.gradle
+++ b/FlashWiz_FrontEnd/app/build.gradle
@@ -72,5 +72,6 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.43.2'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
+    implementation "com.google.accompanist:accompanist-insets:0.20.0"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 }
