--- a/FlashWiz_FrontEnd/app/build.gradle
+++ b/FlashWiz_FrontEnd/app/build.gradle
@@ -74,4 +74,9 @@ dependencies {
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
     implementation "com.google.accompanist:accompanist-insets:0.20.0"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
+
 }
