--- a/FlashWizBE/FlashWizServer/build.gradle
+++ b/FlashWizBE/FlashWizServer/build.gradle
@@ -15,6 +15,9 @@ repositories {
     mavenCentral()
 }
 
+
+
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -23,10 +26,12 @@ dependencies {
     
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1' // corrected typo here
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    
-    
-    
+	implementation group: 'org.springframework.security', name: 'spring-security-core', version: '6.2.1'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.2.5.RELEASE'
+	implementation "org.springframework.boot:spring-boot-starter-security"
+	
+	
+ 
 }
 
 tasks.named('test') {
