--- a/FlashWizBE/FlashWizServer/build.gradle
+++ b/FlashWizBE/FlashWizServer/build.gradle
@@ -25,13 +25,14 @@ dependencies {
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
     
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1' // corrected typo here
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation group: 'org.springframework.security', name: 'spring-security-core', version: '6.2.1'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.2.5.RELEASE'
-	implementation "org.springframework.boot:spring-boot-starter-security"
-	
-	
- 
+    
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.1'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.1.5'
+    
+    
+    
+    
 }
 
 tasks.named('test') {
