[FIX] Update ApplicationSecurityConfig and Test Token API

--- a/FlashWizBE/FlashWizServer/src/main/resources/application.properties
+++ b/FlashWizBE/FlashWizServer/src/main/resources/application.properties
@@ -5,9 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=Vodinhluan2002
 #spring.datasource.password=matkhau
 spring.jpa.hibernate.ddl-auto=update
-<<<<<<< HEAD
-server.port=8000
-=======
 
 server.port=8080
->>>>>>> 4310d50f4b63a229c548b1161e7aae153c433059
+
+app.jwt.secret = Abcdef123456789hiklm
+
