--- a/FlashWizBE/FlashWizServer/build.gradle
+++ b/FlashWizBE/FlashWizServer/build.gradle
@@ -16,8 +16,6 @@ repositories {
 }
 
 
-
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -29,10 +27,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.1'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.1.5'
+	implementation group: 'org.springframework.security', name: 'spring-security-core', version: '6.2.3'    
+	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
+	
+
     
     
-    
-    
+ 
 }
 
 tasks.named('test') {
