--- a/FlashWiz_FrontEnd/app/build.gradle
+++ b/FlashWiz_FrontEnd/app/build.gradle
@@ -50,36 +50,40 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.activity:activity-compose:1.8.2'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.2.0'
+    implementation 'androidx.compose.material:material:1.6.4'
     implementation 'androidx.compose.material3:material3-android:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
+    //noinspection GradleDependency
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     //icons
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
     //navigation
-    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.navigation:navigation-compose:2.7.7"
     //DI
-    implementation 'com.google.dagger:hilt-android:2.43.2'
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation 'com.google.dagger:hilt-android:2.49'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
 
     // material
 //    implementation 'androidx.compose.material3'
 
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
     implementation "com.google.accompanist:accompanist-insets:0.20.0"
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    kapt "androidx.hilt:hilt-compiler:1.2.0"
+    runtimeOnly group: 'androidx.hilt', name: 'hilt-navigation-compose', version: '1.2.0'
+
+
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
