--- a/FlashWizBE/FlashWizServer/src/main/resources/application.properties
+++ b/FlashWizBE/FlashWizServer/src/main/resources/application.properties
@@ -2,12 +2,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/flashwizdb?createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=root
-spring.datasource.password=Vodinhluan2002
+spring.datasource.password=admin123
 #spring.datasource.password=matkhau
 spring.jpa.hibernate.ddl-auto=update
-<<<<<<< HEAD
-server.port=8000
-=======
 
 server.port=8080
->>>>>>> 4310d50f4b63a229c548b1161e7aae153c433059
