--- a/FlashWiz_FrontEnd/app/build.gradle
+++ b/FlashWiz_FrontEnd/app/build.gradle
@@ -72,8 +72,8 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.43.2'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
-    // material
-//    implementation 'androidx.compose.material3'
+    // Jetpack DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
     implementation "com.google.accompanist:accompanist-insets:0.20.0"
