--- a/FlashWiz_FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FlashWiz_FrontEnd/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:name="com.example.flashwiz_fe.AuthApplication"
         android:allowBackup="true"
@@ -23,7 +25,6 @@
             android:theme="@style/Theme.AuthModuleYT">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
