--- a/FlashWiz_FrontEnd/app/build.gradle
+++ b/FlashWiz_FrontEnd/app/build.gradle
@@ -50,6 +50,8 @@ android {
 }
 
 dependencies {
+    def compose_version = "1.2.1"
+
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
@@ -115,7 +117,7 @@ dependencies {
     //Accompanist
     implementation ("com.google.accompanist:accompanist-systemuicontroller:0.31.4-beta")
 
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
-
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
+    implementation "androidx.compose.runtime:runtime-rxjava2:$compose_ui_version"
 
 }
