--- a/FlashWiz_FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FlashWiz_FrontEnd/app/src/main/AndroidManifest.xml
@@ -12,23 +12,27 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:supportsRtl="true"
+        android:label="FlashWiz"
         android:theme="@style/Theme.AuthModuleYT"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
 
         tools:targetApi="31">
         <activity
-            android:name="com.example.flashwiz_fe.MainActivity"
+            android:name="com.example.flashwiz_fe.SplashActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.AuthModuleYT">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
 
+        <activity
+            android:name="com.example.flashwiz_fe.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AuthModuleYT">
         </activity>
     </application>
 
