--- a/FlashWiz_FrontEnd/app/build.gradle
+++ b/FlashWiz_FrontEnd/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.dagger.hilt.android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -33,7 +34,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8
     }
     buildFeatures {
         compose true
@@ -50,6 +51,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.4.1'
     def compose_version = "1.2.1"
 
     implementation 'androidx.core:core-ktx:1.12.0'
@@ -119,5 +121,8 @@ dependencies {
 
     implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
     implementation "androidx.compose.runtime:runtime-rxjava2:$compose_ui_version"
+
+    //Firebase
+    implementation(platform("com.google.firebase:firebase-bom:32.8.1"))
 
 }
