--- a/FlashWiz_FrontEnd/build.gradle
+++ b/FlashWiz_FrontEnd/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext.compose_ui_version = '1.2.0'
     repositories{
         google()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.4.1'
