--- a/FlashWiz_FrontEnd/app/build.gradle
+++ b/FlashWiz_FrontEnd/app/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -50,6 +51,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-messaging:24.0.0'
     def compose_version = "1.2.1"
 
     implementation 'androidx.core:core-ktx:1.12.0'
@@ -116,8 +118,8 @@ dependencies {
 
     //Accompanist
     implementation ("com.google.accompanist:accompanist-systemuicontroller:0.31.4-beta")
-
     implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
     implementation "androidx.compose.runtime:runtime-rxjava2:$compose_ui_version"
+
 
 }
